--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -158,38 +158,116 @@
    "outputs": [],
    "source": [
     "row_len, col_len = len(board), len(board[0])\n",
-    "diff_list = []\n",
+    "diff_list = [[0] * (col_len+1) for _ in range(row_len+1)]\n",
     "\n",
     "for i in range(row_len+1):\n",
     "    for j in range(col_len+1):\n",
     "        \n",
     "        chk_board = board[i:i+8][j:j+8]\n",
-    "        diff = 0\n",
-    "        \n",
+    "     \n",
     "        if chk_board[0][0] == 0:\n",
-    "            diff += abs(white[i][j] - chk_board[i][j])\n",
+    "            diff = sum(abs(white[i][j] - chk_board[i][j]))\n",
+    "        else:\n",
+    "            diff = sum(abs(black[i][]))\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "row_len, col_len = len(board), len(board[0])\n",
+    "diff_list = [[0] * (col_len+1) for _ in range(row_len+1)]\n",
+    "\n",
+    "for i in range(row_len+1):\n",
+    "    for j in range(col_len+1):\n",
+    "        \n",
+    "        chk_board = board[i:i+8][j:j+8]\n",
+    "     \n",
+    "        if chk_board[0][0] == 0:                       \n",
+    "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
+    "        else:\n",
+    "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
+    "        \n",
+    "        diff_list[i, j] = diff   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x, y \u001b[39m=\u001b[39m [[\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m], [\u001b[39m7\u001b[39m, \u001b[39m2\u001b[39m]], [[\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m],[\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m]]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39msum\u001b[39;49m([[(y[i][j] \u001b[39m-\u001b[39;49m x[i][j]) \u001b[39mfor\u001b[39;49;00m j \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(y[\u001b[39m0\u001b[39;49m]))] \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(y))])\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = [[2,3],[7, 2]], [[1,2],[1,2]]\n",
+    "sum([[(y[i][j] - x[i][j]) for j in range(len(y[0]))] for i in range(len(y))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "[[-1, -1], [-6, 0]]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x, y = [2,3], [7, 2]\n",
-    "sum([(y[i] - x[i]) for i in range(len(y))])"
+    "[[(y[i][j] - x[i][j]) for j in range(len(y[0]))] for i in range(len(y))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([sum([(y[i][j] - x[i][j]) for j in range(len(y[0]))]) for i in range(len(y))])"
    ]
   }
  ],
