--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        " [1, 0, 1, 0, 1, 0, 1, 0]]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        " [0, 1, 0, 1, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,30 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row_len, col_len = len(board), len(board[0])\n",
-    "diff_list = [[0] * (col_len+1) for _ in range(row_len+1)]\n",
-    "\n",
-    "for i in range(row_len+1):\n",
-    "    for j in range(col_len+1):\n",
-    "        \n",
-    "        chk_board = board[i:i+8][j:j+8]\n",
-    "     \n",
-    "        if chk_board[0][0] == 0:\n",
-    "            diff = sum(abs(white[i][j] - chk_board[i][j]))\n",
-    "        else:\n",
-    "            diff = sum(abs(black[i][]))\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6\n"
+     ]
+    },
     {
      "ename": "IndexError",
      "evalue": "list index out of range",
@@ -184,28 +170,29 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 8\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m diff_list[i, j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "row_len, col_len = len(board), len(board[0])\n",
-    "diff_list = [[0] * (col_len+1) for _ in range(row_len+1)]\n",
+    "row_board_len, col_board_len, row_chess_len, col_chess_len = len(board), len(board[0]), len(white_chess), len(white_chess[0])\n",
+    "diff_list = [[0] * (col_board_len - col_chess_len + 1) for _ in range(row_board_len - row_chess_len + 1)]\n",
+    "print(len(diff_list), len(diff_list[0]))\n",
     "\n",
-    "for i in range(row_len+1):\n",
-    "    for j in range(col_len+1):\n",
+    "for i in range(row_board_len - row_chess_len + 1):\n",
+    "    for j in range(col_board_len - col_chess_len + 1):\n",
     "        \n",
-    "        chk_board = board[i:i+8][j:j+8]\n",
+    "        chk_board = board[i : i+8][j : j+8]\n",
     "     \n",
     "        if chk_board[0][0] == 0:                       \n",
     "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
     "        else:\n",
     "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
     "        \n",
-    "        diff_list[i, j] = diff   "
+    "        diff_list[i][j] = diff   "
    ]
   },
   {
