--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +82,34 @@
    "source": [
     "board = [[0 if board[i][j] == \"W\" else 1 for j in range(len(board[i]))] for i in range(len(board))]\n",
     "board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board_8 = [[board[x][y] for y in range(1, 9)] for x in range(1, 9)]\n",
+    "board_8"
    ]
   },
   {
@@ -153,7 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -161,19 +196,6 @@
      "output_type": "stream",
      "text": [
       "3 6\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 7\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(white_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])            \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     diff \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m([\u001b[39msum\u001b[39m([\u001b[39mabs\u001b[39m(black_chess[k][l] \u001b[39m-\u001b[39m chk_board[k][l]) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board[\u001b[39m0\u001b[39m]))]) \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(chk_board))])    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m diff_list[i][j] \u001b[39m=\u001b[39m diff\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -185,7 +207,7 @@
     "for i in range(row_board_len - row_chess_len + 1):\n",
     "    for j in range(col_board_len - col_chess_len + 1):\n",
     "        \n",
-    "        chk_board = board[i : i+8][j : j+8]\n",
+    "        chk_board = [[board[x][y] for y in range(j, j+8)] for x in range(i, i+8)]\n",
     "     \n",
     "        if chk_board[0][0] == 0:                       \n",
     "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
@@ -193,6 +215,40 @@
     "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
     "        \n",
     "        diff_list[i][j] = diff   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32, 28, 40, 20, 48, 12], [32, 35, 25, 41, 19, 47], [32, 29, 38, 23, 44, 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diff_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32, 28, 40, 20, 48, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(diff_list))"
    ]
   },
   {
