--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -236,81 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[32, 28, 40, 20, 48, 12]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(min(diff_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1018.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x, y \u001b[39m=\u001b[39m [[\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m], [\u001b[39m7\u001b[39m, \u001b[39m2\u001b[39m]], [[\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m],[\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m]]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1018.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39msum\u001b[39;49m([[(y[i][j] \u001b[39m-\u001b[39;49m x[i][j]) \u001b[39mfor\u001b[39;49;00m j \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(y[\u001b[39m0\u001b[39;49m]))] \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(y))])\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "x, y = [[2,3],[7, 2]], [[1,2],[1,2]]\n",
-    "sum([[(y[i][j] - x[i][j]) for j in range(len(y[0]))] for i in range(len(y))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[-1, -1], [-6, 0]]"
+       "12"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[[(y[i][j] - x[i][j]) for j in range(len(y[0]))] for i in range(len(y))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-8"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum([sum([(y[i][j] - x[i][j]) for j in range(len(y[0]))]) for i in range(len(y))])"
+    "min([min(x) for x in diff_list])"
    ]
   }
  ],
