--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        " [1, 0, 1, 0, 1, 0, 1, 0]]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        " [0, 1, 0, 1, 0, 1, 0, 1]]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -231,27 +224,9 @@
     }
    ],
    "source": [
-    "print(diff_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min([min(x) for x in diff_list])"
+    "print(diff_list)\n",
+    "print()\n",
+    "print(min([min(x) for x in diff_list]))"
    ]
   }
  ],
