--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -86,34 +86,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 1, 1, 1, 1, 1, 1, 1],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [1, 1, 1, 1, 1, 1, 1, 1],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board_8 = [[board[x][y] for y in range(1, 9)] for x in range(1, 9)]\n",
-    "board_8"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
    "outputs": [],
@@ -224,6 +196,69 @@
     }
    ],
    "source": [
+    "print(diff_list)\n",
+    "print()\n",
+    "print(min([min(x) for x in diff_list]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6\n",
+      "[[32, 28, 40, 20, 48, 12], [32, 35, 25, 41, 19, 47], [32, 29, 38, 23, 44, 17]]\n",
+      "\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
+    "    N, M = map(int, f.readline().split())\n",
+    "    \n",
+    "    board = [[0] * M for _ in range(N)]\n",
+    "    for i in range(N):\n",
+    "        row = f.readline()        \n",
+    "        for j in range(M):\n",
+    "            board[i][j] = row[j]\n",
+    "            \n",
+    "board = [[0 if board[i][j] == \"W\" else 1 for j in range(len(board[i]))] for i in range(len(board))]\n",
+    "\n",
+    "white_row = [0, 1] * 4\n",
+    "black_row = [1, 0] * 4\n",
+    "\n",
+    "white_chess = [white_row, black_row] * 4\n",
+    "black_chess = [black_row, white_row] * 4\n",
+    "\n",
+    "row_board_len, col_board_len, row_chess_len, col_chess_len = len(board), len(board[0]), len(white_chess), len(white_chess[0])\n",
+    "diff_list = [[0] * (col_board_len - col_chess_len + 1) for _ in range(row_board_len - row_chess_len + 1)]\n",
+    "print(len(diff_list), len(diff_list[0]))\n",
+    "\n",
+    "for i in range(row_board_len - row_chess_len + 1):\n",
+    "    for j in range(col_board_len - col_chess_len + 1):\n",
+    "        \n",
+    "        chk_board = [[board[x][y] for y in range(j, j+8)] for x in range(i, i+8)]\n",
+    "     \n",
+    "        if chk_board[0][0] == 0:                       \n",
+    "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
+    "        else:\n",
+    "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
+    "        \n",
+    "        diff_list[i][j] = diff   \n",
+    "        \n",
     "print(diff_list)\n",
     "print()\n",
     "print(min([min(x) for x in diff_list]))"
