--- a/boj_1018.ipynb
+++ b/boj_1018.ipynb
@@ -266,9 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
@@ -299,6 +307,56 @@
     "        if chk_board[0][0] == 0:                       \n",
     "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
     "        else:\n",
+    "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
+    "        \n",
+    "        diff_list[i][j] = diff   \n",
+    "\n",
+    "print(min([min(x) for x in diff_list]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "with open(\"data/boj_1018.txt\", \"r\") as f:\n",
+    "    N, M = map(int, f.readline().split())\n",
+    "    \n",
+    "    board = [[0] * M for _ in range(N)]\n",
+    "    for i in range(N):\n",
+    "        row = f.readline()        \n",
+    "        for j in range(M):\n",
+    "            board[i][j] = row[j]\n",
+    "            \n",
+    "board = [[0 if board[i][j] == \"W\" else 1 for j in range(len(board[i]))] for i in range(len(board))]\n",
+    "\n",
+    "white_row = [0, 1] * 4\n",
+    "black_row = [1, 0] * 4\n",
+    "\n",
+    "white_chess = [white_row, black_row] * 4\n",
+    "black_chess = [black_row, white_row] * 4\n",
+    "\n",
+    "row_board_len, col_board_len, row_chess_len, col_chess_len = len(board), len(board[0]), len(white_chess), len(white_chess[0])\n",
+    "diff_list = [[0] * (col_board_len - col_chess_len + 1) for _ in range(row_board_len - row_chess_len + 1)]\n",
+    "\n",
+    "for i in range(row_board_len - row_chess_len + 1):\n",
+    "    for j in range(col_board_len - col_chess_len + 1):\n",
+    "        \n",
+    "        chk_board = [[board[x][y] for y in range(j, j+8)] for x in range(i, i+8)]\n",
+    "     \n",
+    "        if chk_board[0][0] == 0 or chk_board[-1][-1] == 0:                       \n",
+    "            diff = sum([sum([abs(white_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])            \n",
+    "        elif chk_board[0][0] == 0 or chk_board[-1][-1] == 0: \n",
     "            diff = sum([sum([abs(black_chess[k][l] - chk_board[k][l]) for l in range(len(chk_board[0]))]) for k in range(len(chk_board))])    \n",
     "        \n",
     "        diff_list[i][j] = diff   \n",
