Prefix Sum & Interval Sum

--- a/prefix_sum.ipynb
+++ b/prefix_sum.ipynb
@@ -57,6 +57,30 @@
     "\n",
     "print(*prefix_sum)       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 9 16 20 23 28 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [1, 8, 7, 4, 3, 5, 6]\n",
+    "n = len(array)\n",
+    "prefix_sum = [0] * (n + 1)\n",
+    "\n",
+    "for i in range(n):\n",
+    "    prefix_sum[i + 1] = prefix_sum[i] + array[i]\n",
+    "    \n",
+    "print(*prefix_sum)"
+   ]
   }
  ],
  "metadata": {
