More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -12,11 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7     P : 15\n",
+      "\n",
+      "String : 1,   Fret : 5\n",
+      "String : 2,   Fret : 3\n",
+      "String : 2,   Fret : 5\n",
+      "String : 2,   Fret : 7\n",
+      "String : 2,   Fret : 4\n",
+      "String : 1,   Fret : 5\n",
+      "String : 1,   Fret : 3\n"
+     ]
+    }
+   ],
    "source": [
-    "input = sys.stdin.readline\n",
+    "#input = sys.stdin.readline\n",
     "pq = []\n",
     "\n",
     "N, P = map(int, input().split())\n",
@@ -35,7 +51,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#input = sys.stdin.readline\n",
+    "pq = []\n",
+    "\n",
+    "N, P = map(int, input().split())\n",
+    "print(f\"N : {N}     P : {P}\")\n",
+    "print()\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    print(f\"String : {String},   Fret : {Fret}\")\n",
+    "    \n",
+    "    hq.heappush(pq, (String, -Fret))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, -7)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hq.heappop(pq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 -5\n",
+      "2 -4\n",
+      "2 -3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s, f in pq:\n",
+    "    print(s, f)"
+   ]
   }
  ],
  "metadata": {
