--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -48,9 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7     P : 15\n",
+      "\n",
+      "String : 1,   Fret : 5\n",
+      "String : 2,   Fret : 3\n",
+      "String : 2,   Fret : 5\n",
+      "String : 2,   Fret : 7\n",
+      "String : 2,   Fret : 4\n",
+      "String : 1,   Fret : 5\n",
+      "String : 1,   Fret : 3\n"
+     ]
+    }
+   ],
    "source": [
     "#input = sys.stdin.readline\n",
     "pq = []\n",
@@ -68,43 +84,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, -7)"
+       "[(1, -5), (2, -7), (1, -5), (2, -3), (2, -4), (2, -5), (1, -3)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hq.heappop(pq)"
+    "pq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 -5\n",
-      "2 -4\n",
-      "2 -3\n"
-     ]
-    }
-   ],
-   "source": [
-    "for s, f in pq:\n",
-    "    print(s, f)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
