More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -104,23 +104,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 2, 2, 2, 1]\n",
+      "[-5, -7, -5, -3, -4, -5, -3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{1: None, 2: None}"
+       "dict_values([dict_values([..., dict_values([..., ...])]), dict_values([dict_values([..., ...]), ...])])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pq_dict = {}\n",
-    "\n"
+    "k_list, v_list = [], []\n",
+    "\n",
+    "for k, v in pq:\n",
+    "    k_list.append(k)\n",
+    "    v_list.append(v)\n",
+    "    \n",
+    "print(k_list)\n",
+    "print(v_list)\n",
+    "\n",
+    "for k, v in zip(k_list, v_list):\n",
+    "    if k not in pq_dict.keys():\n",
+    "        values = []\n",
+    "        pq_dict[k] = values.append(v)\n",
+    "    \n",
+    "    else:\n",
+    "        pq_dict[k] = pq_dict.values()\n",
+    "        \n",
+    "pq_dict.values()"
    ]
   },
   {
