More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -118,10 +118,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_values([dict_values([..., dict_values([..., ...])]), dict_values([dict_values([..., ...]), ...])])"
+       "{1: [-5, -5, -3], 2: [-7, -3, -4, -5]}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,30 +139,11 @@
     "\n",
     "for k, v in zip(k_list, v_list):\n",
     "    if k not in pq_dict.keys():\n",
-    "        values = []\n",
-    "        pq_dict[k] = values.append(v)\n",
-    "    \n",
+    "        pq_dict[k] = [v]\n",
     "    else:\n",
-    "        pq_dict[k] = pq_dict.values()\n",
+    "        pq_dict[k].append(v)   \n",
     "        \n",
-    "pq_dict.values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def guitar_pop(s, f):\n",
-    "    if "
+    "pq_dict\n"
    ]
   }
  ],
