--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "[(1, -5), (2, -7), (1, -5), (2, -3), (2, -4), (2, -5), (1, -3)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,6 +145,234 @@
     "        \n",
     "pq_dict\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def guitar_pop(s, f):\n",
+    "    if sum([x > f for x in pq_dict[s]]) > 1:\n",
+    "        pop_list = [x > f for x in pq_dict[s]]\n",
+    "        for i in range(len(pop_list)):\n",
+    "            if pop_list[k] == True:\n",
+    "                \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([x > -4 for x in pq_dict[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = [x >= -4 for x in pq_dict[2]] \n",
+    "\n",
+    "for k in range(len(z)):\n",
+    "    if z[k] == True:\n",
+    "        print(k)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 8, 0, 3, 0, -5]\n",
+      "[False, True, True, False, True, False, False]\n",
+      "[1, 4, 8, 0, 3, 0, -5]\n",
+      "[1, 0, 0, -5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 4, 8, 0, 3, 0, -5]\n",
+    "print(a)\n",
+    "\n",
+    "greater_than_one = [x > 1 for x in a]\n",
+    "print(greater_than_one)\n",
+    "\n",
+    "\n",
+    "less_than_or_equal_to_one = []\n",
+    "for i, x in enumerate(a):\n",
+    "    if not greater_than_one[i]:\n",
+    "        less_than_or_equal_to_one.append(x)\n",
+    "        \n",
+    "print(a)\n",
+    "print(less_than_or_equal_to_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 8, 0, 3, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([False, True, False, False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-7, -3, -4, -5]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pq_dict[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, -5), (2, -7), (1, -5), (2, -3), (2, -4), (2, -5), (1, -3)]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, -5), (2, -7), (1, -5), (2, -6), (2, -4), (2, -5), (1, -3), (2, -3)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hq.heappush(pq, (2, -6))\n",
+    "pq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
