More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -142,7 +142,7 @@
     "    else:\n",
     "        pq_dict[k].append(v)   \n",
     "        \n",
-    "pq_dict\n"
+    "pq_dict"
    ]
   },
   {
