More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "pq = []\n",
+    "pq = [[] for _ in range(50_000)]\n",
     "\n",
     "N, P = map(int, input().split())\n",
     "print(f\"N : {N}     P : {P}\")\n",
@@ -78,7 +78,7 @@
     "    String, Fret = map(int, input().split())    \n",
     "    print(f\"String : {String},   Fret : {Fret}\")\n",
     "    \n",
-    "    hq.heappush(pq, (String, -Fret))"
+    "    hq.heappush(pq[String-1], (String, -Fret))"
    ]
   },
   {
@@ -150,7 +150,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pq = []\n",
+    "\n",
+    "N, P = map(int, input().split())\n",
+    "print(f\"N : {N}     P : {P}\")\n",
+    "print()\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    print(f\"String : {String},   Fret : {Fret}\")\n",
+    "    \n",
+    "    hq.heappush(pq, (String, -Fret))\n",
+    "    \n",
+    "    for s, f in pq:\n",
+    "        if String == s and Fret > f:\n",
+    "                       "
+   ]
   }
  ],
  "metadata": {
