More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -83,22 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, -5), (2, -7), (1, -5), (2, -3), (2, -4), (2, -5), (1, -3)]"
+       "([(1, -5), (1, -5), (1, -3)], [(2, -7), (2, -4), (2, -5), (2, -3)])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pq"
+    "pq[0], pq[1]"
    ]
   },
   {
@@ -151,21 +151,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pq = []\n",
+    "pq = [[] for _ in range(500_000)]\n",
     "\n",
     "N, P = map(int, input().split())\n",
     "print(f\"N : {N}     P : {P}\")\n",
     "print()\n",
     "\n",
+    "ans = 0\n",
+    "\n",
     "for _ in range(N):\n",
     "    String, Fret = map(int, input().split())    \n",
     "    print(f\"String : {String},   Fret : {Fret}\")\n",
     "    \n",
-    "    hq.heappush(pq, (String, -Fret))\n",
+    "    hq.heappush(pq[String-1], -Fret)\n",
+    "    ans += 1\n",
     "    \n",
-    "    for s, f in pq:\n",
-    "        if String == s and Fret > f:\n",
-    "                       "
+    "    while pq[String-1]:\n",
+    "        if -Fret > f:\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
+    "            \n",
+    "print(ans)                       "
    ]
   }
  ],
