More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -147,9 +147,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N : 7     P : 15\n",
+      "\n",
+      "String : 1,   Fret : 5\n",
+      "String : 2,   Fret : 3\n",
+      "String : 2,   Fret : 5\n",
+      "String : 2,   Fret : 7\n",
+      "String : 2,   Fret : 4\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_2841.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39m-\u001b[39mFret \u001b[39m>\u001b[39m \u001b[39mmin\u001b[39m(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m-\u001b[39mFret \u001b[39m>\u001b[39m f:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m         hq\u001b[39m.\u001b[39mheappop(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pq = [[] for _ in range(500_000)]\n",
     "\n",
@@ -166,10 +191,9 @@
     "    hq.heappush(pq[String-1], -Fret)\n",
     "    ans += 1\n",
     "    \n",
-    "    while pq[String-1]:\n",
-    "        if -Fret > f:\n",
-    "            hq.heappop(pq[String-1])\n",
-    "            ans += 1\n",
+    "    while -Fret > min(pq[String-1]):\n",
+    "        hq.heappop(pq[String-1])\n",
+    "        ans += 1\n",
     "            \n",
     "print(ans)                       "
    ]
