More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -160,18 +160,10 @@
       "String : 2,   Fret : 3\n",
       "String : 2,   Fret : 5\n",
       "String : 2,   Fret : 7\n",
-      "String : 2,   Fret : 4\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_2841.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39m-\u001b[39mFret \u001b[39m>\u001b[39m \u001b[39mmin\u001b[39m(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m-\u001b[39mFret \u001b[39m>\u001b[39m f:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m         hq\u001b[39m.\u001b[39mheappop(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+      "String : 2,   Fret : 4\n",
+      "String : 1,   Fret : 5\n",
+      "String : 1,   Fret : 3\n",
+      "11\n"
      ]
     }
    ],
@@ -196,6 +188,26 @@
     "        ans += 1\n",
     "            \n",
     "print(ans)                       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-3], [-4, -3])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pq[0], pq[1]"
    ]
   }
  ],
