More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -157,18 +157,20 @@
       "N : 7     P : 15\n",
       "\n",
       "String : 1,   Fret : 5\n",
-      "pq[0] : [],   ans : 0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "min() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_2841.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mString : \u001b[39m\u001b[39m{\u001b[39;00mString\u001b[39m}\u001b[39;00m\u001b[39m,   Fret : \u001b[39m\u001b[39m{\u001b[39;00mFret\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpq[\u001b[39m\u001b[39m{\u001b[39;00mString\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m] : \u001b[39m\u001b[39m{\u001b[39;00mpq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m,   ans : \u001b[39m\u001b[39m{\u001b[39;00mans\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39m-\u001b[39mFret \u001b[39m>\u001b[39m \u001b[39mmin\u001b[39;49m(pq[String\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]) \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     hq\u001b[39m.\u001b[39mheappop(pq[String\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2841.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+      "pq[0] : [],   ans : 0\n",
+      "String : 2,   Fret : 3\n",
+      "pq[1] : [],   ans : 1\n",
+      "String : 2,   Fret : 5\n",
+      "pq[1] : [-3],   ans : 2\n",
+      "String : 2,   Fret : 7\n",
+      "pq[1] : [-5, -3],   ans : 3\n",
+      "String : 2,   Fret : 4\n",
+      "pq[1] : [-7, -3, -5],   ans : 4\n",
+      "String : 1,   Fret : 5\n",
+      "pq[0] : [-5],   ans : 7\n",
+      "String : 1,   Fret : 3\n",
+      "pq[0] : [-5, -5],   ans : 8\n",
+      "11\n"
      ]
     }
    ],
@@ -187,7 +189,7 @@
     "    \n",
     "    print(f\"pq[{String-1}] : {pq[String-1]},   ans : {ans}\")\n",
     "    \n",
-    "    while -Fret > min(pq[String-1]) and len(pq[String-1]) > 0:\n",
+    "    while len(pq[String-1]) > 0 and -Fret > min(pq[String-1]):\n",
     "        hq.heappop(pq[String-1])\n",
     "        ans += 1\n",
     "        \n",
