--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -161,16 +161,16 @@
       "String : 2,   Fret : 3\n",
       "pq[1] : [-3],   ans : 2\n",
       "String : 2,   Fret : 5\n",
-      "pq[1] : [-5, -3],   ans : 3\n",
+      "pq[1] : [-5],   ans : 4\n",
       "String : 2,   Fret : 7\n",
-      "pq[1] : [-7, -3, -5],   ans : 4\n",
+      "pq[1] : [-7],   ans : 6\n",
       "String : 2,   Fret : 4\n",
-      "pq[1] : [-4, -3],   ans : 7\n",
+      "pq[1] : [-4],   ans : 8\n",
       "String : 1,   Fret : 5\n",
-      "pq[0] : [-5, -5],   ans : 8\n",
+      "pq[0] : [-5],   ans : 10\n",
       "String : 1,   Fret : 3\n",
-      "pq[0] : [-3],   ans : 11\n",
-      "11\n"
+      "pq[0] : [-3],   ans : 12\n",
+      "12\n"
      ]
     }
    ],
@@ -187,9 +187,10 @@
     "    String, Fret = map(int, input().split())    \n",
     "    print(f\"String : {String},   Fret : {Fret}\") \n",
     "    \n",
-    "    while len(pq[String-1]) > 0 and -Fret > max(pq[String-1]):\n",
-    "        hq.heappop(pq[String-1])\n",
-    "        ans += 1\n",
+    "    while pq[String-1]:\n",
+    "        if -Fret < min(pq[String-1]):\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
     "        \n",
     "    hq.heappush(pq[String-1], -Fret)\n",
     "    ans += 1\n",
