More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -318,6 +318,36 @@
     "            \n",
     "print(ans)                       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq as hq\n",
+    "\n",
+    "pq = [[] for _ in range(500_000)]\n",
+    "\n",
+    "N, P = map(int, input().split())\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    print(f\"String : {String},   Fret : {Fret}\") \n",
+    "    \n",
+    "    for _ in range(len(pq[String-1])) :\n",
+    "        if -Fret > min(pq[String-1]):\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
+    "    \n",
+    "    if -Fret not in pq[String-1]:    \n",
+    "        hq.heappush(pq[String-1], -Fret)\n",
+    "        ans += 1    \n",
+    "               \n",
+    "print(ans)                       "
+   ]
   }
  ],
  "metadata": {
