More on boj_2841.ipynb

--- a/boj_2841.ipynb
+++ b/boj_2841.ipynb
@@ -321,26 +321,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String : 1,   Fret : 5\n",
-      "String : 2,   Fret : 3\n",
-      "String : 2,   Fret : 5\n",
-      "String : 2,   Fret : 7\n",
-      "String : 2,   Fret : 4\n",
-      "String : 1,   Fret : 5\n",
-      "String : 1,   Fret : 3\n",
       "9\n"
      ]
     }
    ],
    "source": [
     "import heapq as hq\n",
+    "\n",
+    "pq = [[] for _ in range(500_000)]\n",
+    "N, P = map(int, input().split())\n",
+    "ans = 0\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    String, Fret = map(int, input().split())    \n",
+    "    \n",
+    "    for _ in range(len(pq[String-1])) :\n",
+    "        if -Fret > min(pq[String-1]):\n",
+    "            hq.heappop(pq[String-1])\n",
+    "            ans += 1\n",
+    "    \n",
+    "    if -Fret not in pq[String-1]:    \n",
+    "        hq.heappush(pq[String-1], -Fret)\n",
+    "        ans += 1    \n",
+    "               \n",
+    "print(ans)                   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import heapq as hq\n",
+    "\n",
+    "input = sys.stdin.readline\n",
     "\n",
     "pq = [[] for _ in range(500_000)]\n",
     "N, P = map(int, input().split())\n",
