More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -25,10 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 1: 14\n",
+      "Case 2: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):    \n",
+    "    L, P, V = map(int, input().split())\n",
+    "    if i < 2:\n",
+    "        full_use, incomplete_use = (V // P) * L, V % P\n",
+    "        total_use = full_use + incomplete_use\n",
+    "        print(f\"Case {i+1}: {total_use}\")"
+   ]
   }
  ],
  "metadata": {
