More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -48,10 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 1: 10\n",
+      "Case 2: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    L, P, V = map(int, input().split())\n",
+    "    if i < 2:\n",
+    "        first_comp = (V // P) * L\n",
+    "        remainage = V - (V // P) * P\n",
+    "        second_comp =  L if remainage >= L else (V % P)\n",
+    "        total_comp = first_comp + second_comp\n",
+    "        print(f\"Case {i+1}: {total_comp}\")"
+   ]
   }
  ],
  "metadata": {
