More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -70,6 +70,24 @@
     "        total_comp = first_comp + second_comp\n",
     "        print(f\"Case {i+1}: {total_comp}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "   L, P, V = map(int, input().split())\n",
+    "   if L==0 and P==0 and V==0:\n",
+    "       break\n",
+    "   \n",
+    "   first_comp = (V // P) * L\n",
+    "   remainage = V - (V // P) * P\n",
+    "   second_comp = L if remainage >= L else (V % P)\n",
+    "   total_comp = first_comp + second_comp\n",
+    "   print(f\"Case {i+1}: {total_comp}\")"
+   ]
   }
  ],
  "metadata": {
