More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -73,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 3: 14\n",
+      "Case 3: 11\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "   L, P, V = map(int, input().split())\n",
@@ -88,6 +97,13 @@
     "   total_comp = first_comp + second_comp\n",
     "   print(f\"Case {i+1}: {total_comp}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
