More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -73,24 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Case 3: 10\n",
       "Case 3: 14\n",
-      "Case 3: 11\n"
+      "Case 3: 11\n",
+      "Case 3: 27\n"
      ]
     }
    ],
    "source": [
+    "i = 0\n",
     "while True:\n",
     "   L, P, V = map(int, input().split())\n",
     "   if L==0 and P==0 and V==0:\n",
     "       break\n",
-    "   \n",
+    "   i += 1\n",
     "   first_comp = (V // P) * L\n",
     "   remainage = V - (V // P) * P\n",
     "   second_comp = L if remainage >= L else (V % P)\n",
