More on boj_4796.ipynb

--- a/boj_4796.ipynb
+++ b/boj_4796.ipynb
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Case 2: 14\n",
-      "Case 3: 11\n",
-      "Case 4: 10\n",
-      "Case 5: 27\n"
+      "Case 1: 14\n",
+      "Case 2: 11\n",
+      "Case 3: 10\n",
+      "Case 4: 27\n"
      ]
     }
    ],
@@ -100,6 +100,27 @@
     "   total_comp = first_comp + second_comp\n",
     "   print(f\"Case {i+1}: {total_comp}\")\n",
     "   i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while True:\n",
+    "   L, P, V = map(int, input().split())\n",
+    "   if L==0 and P==0 and V==0:\n",
+    "       break\n",
+    "   \n",
+    "   i += 1\n",
+    "   first_comp = (V // P) * L\n",
+    "   remainage = V - (V // P) * P\n",
+    "   second_comp = L if remainage >= L else (V % P)\n",
+    "   total_comp = first_comp + second_comp\n",
+    "   print(f\"Case {i}: {total_comp}\")\n",
+    "   "
    ]
   }
  ],
