--- a/boj_15686.ipynb
+++ b/boj_15686.ipynb
@@ -24,6 +24,22 @@
     "    \n",
     "print(combi_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, M = map(int, input().split())\n",
+    "city = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    city[i] = map(int, input().split())\n",
+    "    \n",
+    "for l in city:\n",
+    "    print(l)    "
+   ]
   }
  ],
  "metadata": {
